--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            
+        </div>
+    </footer>
 </body>
 </html>
