--- a/index.html
+++ b/index.html
@@ -13,17 +13,34 @@
 <body>
     <header class="header">
         <div class="container">
-
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">English</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <main class="main">
         <div class="container">
-
+            <div class="section" id="profile">
+                
+            </div>
+            <div class="section"></div>
+            <div class="section"></div>
+            <div class="section"></div>
+            <div class="section"></div>
+            <div class="section"></div>
+            <div class="section"></div>
         </div>
     </main>
     <footer class="footer">
         <div class="container">
-            
+
         </div>
     </footer>
 </body>
