feat: media to elements

--- a/index.html
+++ b/index.html
@@ -56,57 +56,59 @@
             </div>
             <div class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
-                <div class="skills-list">
-                    <div class="skills-item">
+                <ul class="skills-list">
+                    <li class="skills-item">
                         <i class="fa-brands fa-html5 skills-img"></i>
                         <h3 class="skills-subtitle">HTML</h3>
-                    </div>
-                    <div class="skills-item">
+                    </li>
+                    <li class="skills-item">
                         <i class="fa-brands fa-css3-alt skills-img"></i>
                         <h3 class="skills-subtitle">CSS</h3>
-                    </div>
-                    <div class="skills-item">
+                    </li>
+                    <li class="skills-item">
                         <i class="fa-brands fa-square-js skills-img"></i>
                         <h3 class="skills-subtitle">JavaScript</h3>
-                    </div>
-                    <div class="skills-item">
+                    </li>
+                    <li class="skills-item">
                         <i class="fa-brands fa-git-alt skills-img"></i>
                         <h3 class="skills-subtitle">Git</h3>
-                    </div>
-                    <div class="skills-item">
+                    </li>
+                    <li class="skills-item">
                         <i class="fa-brands fa-figma skills-img"></i>
                         <h3 class="skills-subtitle">Figma</h3>
-                    </div>
-                    <div class="skills-item">
+                    </li>
+                    <li class="skills-item">
                         <i class="fa-brands fa-github skills-img"></i>
                         <h3 class="skills-subtitle">Figma</h3>
-                    </div>
-                </div>
+                    </li>
+                </ul>
             </div>
             <div class="section" id="code">
                 <h2 class="section-title">Code</h2>
-                <code class="code-div">
 <pre>
+    <code class="code-div">
 <span class="code-subdiv">function</span> multiply<span class="code-subdiv">(</span>a<span class="code-subdiv">,</span> b<span class="code-subdiv">)</span> <span class="code-subdiv">{</span>
     <span class="code-subdiv">return</span> a <span class="code-subdiv">*</span> b<span class="code-subdiv">;</span>
 <span class="code-subdiv">}</span>
+    </code>
 </pre>
-                </code>
             </div>
             <div class="section" id="projects">
                 <h2 class="section-title">Projects</h2>
-                <div class="projects-list">
-                    <div class="projects-item">
-                        <img src="assets/imgs/cv.png" alt="cv" class="projects-img">
-                        <div class="projects-container">
-                            <h3 class="projects-subtitle">CV</h3>
-                            <div class="projects-elements">
-                                <i class="fa-brands fa-html5 projects-element"></i>
-                                <i class="fa-brands fa-css3-alt projects-element"></i>
+                <ul class="projects-list">
+                    <li class="projects-item">
+                        <a href="#" class="projects-link">
+                            <img src="assets/imgs/cv.png" alt="cv" class="projects-img">
+                            <div class="projects-container">
+                                <h3 class="projects-subtitle">CV</h3>
+                                <div class="projects-elements">
+                                    <i class="fa-brands fa-html5 projects-element"></i>
+                                    <i class="fa-brands fa-css3-alt projects-element"></i>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
             <div class="section section-list">
