fix: update html file

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h2 class="section-title">Projects</h2>
                 <ul class="projects-list">
                     <li class="projects-item">
-                        <a href="#" class="projects-link">
+                        <a href="https://vfeofanov2000.github.io/rsschool-cv/" class="projects-link">
                             <img src="assets/imgs/cv.png" alt="cv" class="projects-img">
                             <div class="projects-container">
                                 <h3 class="projects-subtitle">CV</h3>
@@ -131,5 +131,6 @@
             </a>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/57602965d6.js" crossorigin="anonymous"></script>
 </body>
 </html>
