fix: update html file

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                    <li class="nav-item"><a href="#languages" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link" title="Summary">Summary</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link" title="Skills">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link" title="Code">Code</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link" title="Projects">Projects</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link" title="Education">Education</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link" title="English">English</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,18 +35,14 @@
                         <h1 class="section-subtitle"><span class="subtitle-title">Valera</span> Feofanov</h1>
                     </div>
                     <p class="summary-text">
-                        My goal is to learn everything new and exciting. I love to code. 
-                        I love spend a lot of time doing what interests me. 
-                        My core strengths are in problem solving and fast learning.
-                        I want to get knowledge and skills that will be enough for become 
-                        frontend developer.
+                        My goal is to learn everything new and exciting. I love to code. I love spend a lot of time doing what interests me. My core strengths are in problem solving and fast learning. I want to get knowledge and skills that will be enough for become frontend developer.
                     </p>
                     <ul class="contact-list">
                         <li class="contact-item">
-                            <a href="https://github.com/vfeofanov2000" class="contact-link">
+                            <a href="https://github.com/vfeofanov2000" class="contact-link" title="github">
                                 <i class="fa-brands fa-github contact-img"></i>
                             </a>
-                            <a href="mailto:vfeofanov2000@gmail.com" class="contact-link">
+                            <a href="mailto:vfeofanov2000@gmail.com" class="contact-link" title="gmail">
                                 <i class="fa-solid fa-envelope contact-img"></i>
                             </a>
                         </li>
@@ -97,7 +93,7 @@
                 <h2 class="section-title">Projects</h2>
                 <ul class="projects-list">
                     <li class="projects-item">
-                        <a href="https://vfeofanov2000.github.io/rsschool-cv/" class="projects-link">
+                        <a href="https://vfeofanov2000.github.io/rsschool-cv/" class="projects-link" title="cv">
                             <img src="assets/imgs/cv.png" alt="cv" class="projects-img">
                             <div class="projects-container">
                                 <h3 class="projects-subtitle">CV</h3>
@@ -126,7 +122,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-date">2023</div>
-            <a href="https://rs.school/" class="footer-link" target="_blank">
+            <a href="https://rs.school/" class="footer-link" target="_blank" title="rs school">
                 <img src="assets/rs.svg" alt="rs school" class="footer-img">
             </a>
         </div>
