fix: update html file

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#summary" class="nav-link" title="Summary">Summary</a></li>
-                    <li class="nav-item"><a href="#skills" class="nav-link" title="Skills">Skills</a></li>
-                    <li class="nav-item"><a href="#code" class="nav-link" title="Code">Code</a></li>
-                    <li class="nav-item"><a href="#projects" class="nav-link" title="Projects">Projects</a></li>
-                    <li class="nav-item"><a href="#education" class="nav-link" title="Education">Education</a></li>
-                    <li class="nav-item"><a href="#languages" class="nav-link" title="English">English</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
                 </ul>
             </nav>
         </div>
@@ -112,7 +112,7 @@
                     <h2 class="section-title">Eduction</h2>
                     <p class="section-text">Secondary Special</p>
                 </div>
-                <div class="section-item" id="languages">
+                <div class="section-item" id="english">
                     <h2 class="section-title">English</h2>
                     <p class="section-text">A1</p>
                 </div>
