fix: update html file

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
                     <ul class="contact-list">
                         <li class="contact-item">
                             <a href="https://github.com/vfeofanov2000" class="contact-link" title="github">
+                                <p class="title-block">text</p>
                                 <i class="fa-brands fa-github contact-img"></i>
                             </a>
                             <a href="mailto:vfeofanov2000@gmail.com" class="contact-link" title="gmail">
+                                <p class="title-block">text</p>
                                 <i class="fa-solid fa-envelope contact-img"></i>
                             </a>
                         </li>
@@ -94,6 +96,7 @@
                 <ul class="projects-list">
                     <li class="projects-item">
                         <a href="https://vfeofanov2000.github.io/rsschool-cv/" class="projects-link" title="cv">
+                            <p class="title-block">text</p>
                             <img src="assets/imgs/cv.png" alt="cv" class="projects-img">
                             <div class="projects-container">
                                 <h3 class="projects-subtitle">CV</h3>
@@ -123,6 +126,7 @@
         <div class="container">
             <div class="footer-date">2023</div>
             <a href="https://rs.school/" class="footer-link" target="_blank" title="rs school">
+                <p class="title-block">text</p>
                 <img src="assets/rs.svg" alt="rs school" class="footer-img">
             </a>
         </div>
