fix: update html file

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                         <li class="contact-item">
                             <a href="https://github.com/vfeofanov2000" class="contact-link" title="github">
                                 <p class="title-block">text</p>
-                                <i class="fa-brands fa-github contact-img"></i>
+                                <div class="fa-brands fa-github contact-img"><p class="title-block">text</p></div>
                             </a>
                             <a href="mailto:vfeofanov2000@gmail.com" class="contact-link" title="gmail">
                                 <p class="title-block">text</p>
-                                <i class="fa-solid fa-envelope contact-img"></i>
+                                <div class="fa-solid fa-envelope contact-img"><p class="title-block">text</p></div>
                             </a>
                         </li>
                     </ul>
@@ -56,27 +56,27 @@
                 <h2 class="section-title">Skills</h2>
                 <ul class="skills-list">
                     <li class="skills-item">
-                        <i class="fa-brands fa-html5 skills-img"></i>
+                        <div class="fa-brands fa-html5 skills-img"><p class="title-block">text</p></div>
                         <h3 class="skills-subtitle">HTML</h3>
                     </li>
                     <li class="skills-item">
-                        <i class="fa-brands fa-css3-alt skills-img"></i>
+                        <div class="fa-brands fa-css3-alt skills-img"><p class="title-block">text</p></div>
                         <h3 class="skills-subtitle">CSS</h3>
                     </li>
                     <li class="skills-item">
-                        <i class="fa-brands fa-square-js skills-img"></i>
+                        <div class="fa-brands fa-square-js skills-img"><p class="title-block">text</p></div>
                         <h3 class="skills-subtitle">JavaScript</h3>
                     </li>
                     <li class="skills-item">
-                        <i class="fa-brands fa-git-alt skills-img"></i>
+                        <div class="fa-brands fa-git-alt skills-img"><p class="title-block">text</p></div>
                         <h3 class="skills-subtitle">Git</h3>
                     </li>
                     <li class="skills-item">
-                        <i class="fa-brands fa-figma skills-img"></i>
+                        <div class="fa-brands fa-figma skills-img"><p class="title-block">text</p></div>
                         <h3 class="skills-subtitle">Figma</h3>
                     </li>
                     <li class="skills-item">
-                        <i class="fa-brands fa-github skills-img"></i>
+                        <div class="fa-brands fa-github skills-img"><p class="title-block">text</p></div>
                         <h3 class="skills-subtitle">Figma</h3>
                     </li>
                 </ul>
@@ -101,8 +101,8 @@
                             <div class="projects-container">
                                 <h3 class="projects-subtitle">CV</h3>
                                 <div class="projects-elements">
-                                    <i class="fa-brands fa-html5 projects-element"></i>
-                                    <i class="fa-brands fa-css3-alt projects-element"></i>
+                                    <div class="fa-brands fa-html5 projects-element"><p class="title-block">text</p></div>
+                                    <div class="fa-brands fa-css3-alt projects-element"><p class="title-block">text</p></div>
                                 </div>
                             </div>
                         </a>
