fix: update html file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <header class="header">
         <div class="container">
+            <div class="burger-btn">
+                <span></span>
+            </div>
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
@@ -95,7 +98,7 @@
                 <h2 class="section-title">Projects</h2>
                 <ul class="projects-list">
                     <li class="projects-item">
-                        <a href="https://vfeofanov2000.github.io/rsschool-cv/" class="projects-link" title="cv">
+                        <a href="https://vfeofanov2000.github.io/rsschool-cv/" class="projects-link" title="cv" target="_blank">
                             <p class="title-block">text</p>
                             <img src="assets/imgs/cv.png" alt="cv" class="projects-img">
                             <div class="projects-container">
@@ -125,12 +128,16 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-date">2023</div>
-            <a href="https://rs.school/" class="footer-link" target="_blank" title="rs school">
+            <a href="https://github.com/vfeofanov2000" class="footer-link" target="_blank" title="github">
+                <p class="footer-date">@vfeofanov2000</p>
+            </a>
+            <a href="https://rs.school/js/" class="footer-link" target="_blank" title="rs school">
                 <p class="title-block">text</p>
                 <img src="assets/rs.svg" alt="rs school" class="footer-img">
             </a>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/57602965d6.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
