fix: correct mistaks

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main class="main">
         <div class="container">
-            <div class="section summary" id="summary">
+            <section class="section summary" id="summary">
                 <div class="summary-container">
                     <div class="summary-title">
                         Hello, I'm
@@ -54,8 +54,8 @@
                     </ul>
                 </div>
                 <img src="assets/avatar.png" alt="avatar" class="summary-img">
-            </div>
-            <div class="section" id="skills">
+            </section>
+            <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
                 <ul class="skills-list">
                     <li class="skills-item">
@@ -80,11 +80,11 @@
                     </li>
                     <li class="skills-item">
                         <div class="fa-brands fa-github skills-img"><p class="title-block">text</p></div>
-                        <h3 class="skills-subtitle">Figma</h3>
+                        <h3 class="skills-subtitle">GitHub</h3>
                     </li>
                 </ul>
-            </div>
-            <div class="section" id="code">
+            </section>
+            <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
 <pre>
     <code class="code-div">
@@ -93,8 +93,8 @@
 <span class="code-subdiv">}</span>
     </code>
 </pre>
-            </div>
-            <div class="section" id="projects">
+            </section>
+            <section class="section" id="projects">
                 <h2 class="section-title">Projects</h2>
                 <ul class="projects-list">
                     <li class="projects-item">
@@ -111,9 +111,9 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </section>
 
-            <div class="section section-list">
+            <section class="section section-list">
                 <div class="section-item" id="education">
                     <h2 class="section-title">Eduction</h2>
                     <p class="section-text">Secondary Special</p>
@@ -122,7 +122,7 @@
                     <h2 class="section-title">English</h2>
                     <p class="section-text">A1</p>
                 </div>
-            </div>
+            </section>
         </div>
     </main>
     <footer class="footer">
