--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                                 <p class="title-block">text</p>
                                 <div class="fa-brands fa-github contact-img"><p class="title-block">text</p></div>
                             </a>
+                        </li>
+                        <li class="contact-item">
                             <a href="mailto:vfeofanov2000@gmail.com" class="contact-link" title="gmail">
                                 <p class="title-block">text</p>
                                 <div class="fa-solid fa-envelope contact-img"><p class="title-block">text</p></div>
